tests/negative/neg_pr117_uppercase_identifier.safe
-- Test: neg_pr117_uppercase_identifier
-- Description: Safe source spellings must be lowercase.
-- Expected: REJECT source_frontend_error
-- migrate: skip

package neg_pr117_uppercase_identifier

   function mixed_Name returns integer

      return 1
